refactor(format/yaml): use getFirst instead of get(0)